errorsCheck added, displayNumbers fixed, precision fixed

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
       <div class="screen">
         <div class="prev-operand"></div>
-        <div class="curr-operand"></div>
+        <div class="curr-operand">0</div>
       </div>
       <div class="keypad">
         <button class="btn-num">7</button>
