--- a/index.html
+++ b/index.html
@@ -12,15 +12,23 @@
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@700&display=swap" rel="stylesheet">
-
-
 </head>
-
-<body>
+<body data-theme="dark">
   <div class="App">
     <header>
       <div>calc</div>
-      <div>THEME</div>
+      <div class="theme-toggler-wrapper">
+        <div class="theme-title">THEME</div>
+        <div class="theme-toggler">
+          <input type="radio" id="dark" name="theme" value="dark" checked>
+          <label for="dark"><p>1</p></label>
+          <input type="radio" id="light" name="theme" value="light">
+          <label for="light" ><p>2</p></label>
+          <input type="radio" id="neon" name="theme" value="neon">
+          <label for="neon" ><p>3</p></label>
+           <div class="theme-toggler-ball"></div>
+        </div>
+      </div>
     </header>
     <main>
       <div class="screen">
@@ -49,17 +57,6 @@
       </div>
     </main>
   </div>
-
-
-
-
-
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Wojtek Grabowski</a>.
-  </div> -->
-
-
   <script src="app.js"></script>
 </body>
 
